--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,26 +1,8 @@
-<%= form_for project do |f| %>
-  <% if project.errors.any? %>
-    <h2><%= pluralize(project.errors.count, "error") %>
-      prohibited this project from being saved:</h2>
-
-    <ul>
-      <% project.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-    </ul>
-  <% end %>
+<%= simple_form_for project do |f| %>
+	<%= f.input :name %>
+	<%= f.input :description %>
 
   <div>
-  	<%= f.label :name %><br>
-  	<%= f.text_field :name %>
-  </div>
-
-  <div>
-  	<%= f.label :description %><br>
-  	<%= f.text_field :description %>
-  </div>
-
-  <div>
-  	<%= f.submit %>
+  	<%= f.button :submit, class: "btn-primary" %>
   </div>
 <% end %>
