--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,8 @@
 @import "bootstrap";
 @import "font-awesome";
 @import "projects";
+@import "tickets";
+@import "admin/application";
 @import "responsive";
 
 body {
