--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -4,13 +4,17 @@
 	<h1><%= @project.name %></h1>
 
   <ul class="actions">
-		<li><%= link_to "Edit Project", edit_project_path(@project), class: "edit" %></li> 
-		<li><%= link_to "Delete Project", 
-		    project_path(@project),
-		    class: "delete", 
-		    method: :delete, 
-		    data: { confirm: "Are you sure you want to delete this project?" } 
-		%></li>
+  	<% if policy(@project).update? %>
+		  <li><%= link_to "Edit Project", edit_project_path(@project), class: "edit" %></li>
+		<% end %>
+		<% admins_only do %>
+			<li><%= link_to "Delete Project", 
+			    admin_project_path(@project),
+			    class: "delete", 
+			    method: :delete, 
+			    data: { confirm: "Are you sure you want to delete this project?" } 
+			%></li>
+		<% end %>
 	</ul>
 </header>
 
@@ -23,3 +27,12 @@
 		<li><%= link_to "New Ticket", new_project_ticket_path(@project), class: "new" %></li>
 	</ul>
 </header>
+
+<ul id="tickets">
+	<% @project.tickets.each do |ticket| %>
+	  <li>
+	  	#<%= ticket.id %> - 
+	  	<%= link_to ticket.name, [@project, ticket] %>
+	  </li>
+	<% end %>
+</ul>
