--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -6,8 +6,12 @@
 	<header>
 		<h2><%= @ticket.name %></h2>
 		<ul class="actions">
-			<li><%= link_to "Edit Ticket", [:edit, @project, @ticket], class: "edit" %></li>
-			<li><%= link_to "Delete Ticket", [@project, @ticket], method: :delete, data: { confirm: "Are you sure you want to delete this ticket?" }, class: "delete" %></li>
+			<% if policy(@ticket).update? %>
+			  <li><%= link_to "Edit Ticket", [:edit, @project, @ticket], class: "edit" %></li>
+			<% end %>
+			<% if policy(@ticket).destroy? %>
+			  <li><%= link_to "Delete Ticket", [@project, @ticket], method: :delete, data: { confirm: "Are you sure you want to delete this ticket?" }, class: "delete" %></li>
+			<% end %>
 		</ul>
 	</header>
 
